Cook Orders alignment fix

--- a/src/views/CookOrders/CookOrderCard.css
+++ b/src/views/CookOrders/CookOrderCard.css
@@ -30,9 +30,12 @@
     line-height: 1.6em;
 }
 
-.cookordercard-section>span {
-    font-size: .8em;
-    color: #2b65ec;
+.cookordercard-additional-details {
+    font-size: 1.6em;
+    font-weight: 500;
+    color: #3b3b3b;
+    /* color: #2b65ec; */
+    margin-left: 1%;
 }
 
 .cookordercard-details>div:first-child {
@@ -41,32 +44,51 @@
     margin-bottom: 8px;
 }
 
+/* .cookorderbydatecard-summary-day i.angle.down.icon:active {
+    transform: rotate(180deg);
+    transition-duration: 0.4s;
+}
+
+.cookorderbydatecard-summary-day i.angle.down.icon::after {
+    transform: rotate(180deg);
+    transition-duration: 0.4s;
+}
+ */
+
+
 .cookordercard-order-quantity {
     display: flex;
     align-items: baseline;
     line-height: 1.2em;
     justify-content: flex-start;
     font-size: .75em;
-    font-weight: 600;
+    font-weight: 500;
     text-transform: uppercase;
-    color: #757575;
+    color: #525151;
     margin: 18px 0px 8px 0px;
 }
 
 .cookordercard-order-quantity>div:first-child {
+    display: flex;
     border: 3px solid #b61095;
     border-radius: 12px;
-    color: #3b3b3b;
-    font-size: 1.28em;
+    color: #525151;
+    font-size: 1.25em;
     font-weight: 700;
-    padding: 2px 11px 3px 11px;
+    padding: 7px 11px 5px 11px;
     margin-right: 5px;
     text-transform: lowercase;
-    min-width: 99px; 
+    min-width: 125px;
+    justify-content: center;
+    align-items: center;
+}
+
+.cookordercard-order-size>div:first-child {
+    margin-right: 8px;
 }
 
 .cookordercard-order-quantity>div:last-child {
-    margin-left: 31px;
+    margin-left: 20px;
 }
 
 .cookordercard-order-quantity>div:last-child>span {
@@ -133,6 +155,8 @@
     line-height: 1.35em;
 }
 
+
+
 @media all and (max-width: 767px) {
     .cookordercard-accept.ui.button {
         font-weight: 500;
@@ -151,10 +175,12 @@
     }
     .cookordercard-order-quantity>div:first-child {
         font-size: 1.2em;
+        font-weight: 600;
+    letter-spacing: .5px;
+        
     }
     .cookordercard-order-quantity>div:last-child {
         margin-top: 11px;
-        margin-left: 33px;
         line-height: 1.2em;
     }
     .cookordercard-accept {
